2. Аттестация [#49777]v2